<resources>
    <string name="app_name">Inventory App</string>
    <string name="details">Product Details</string>

    <string name="quantity">Quantity : </string>
    <string name="price">Price : </string>
    <string name="product_name">Product Name</string>
    <string name="sale">Sell</string>

    <string name="details_product_name">Product Name : </string>
    <string name="plus">+1</string>
    <string name="minus">-1</string>
    <string name="product_price">Price :</string>
    <string name="supplier">Supplier Details</string>
    <string name="details_supplier_name">Supplier Name :</string>
    <string name="details_supplier_mail">Email</string>
    <string name="details_supplier_phone">Phone Number</string>
    <string name="phone_call">Call</string>
    <string name="send_email">Send Email</string>
    <string name="delete_product">Delete Product</string>


    <string name="confirm_delete">Are you sure you want to delete this product</string>
    <string name="confirm_leave">Are you sure ?? the current data will not be saved</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="edit">Edit Product</string>
    <string name="update">Update Product</string>
    <string name="add">Add Product</string>
    <string name="successful">Product Added Successfully</string>

    <string name="no_Data">There is no data currently \n\nuse the menu to add new products</string>

</resources>
